STRUCTURE And STYLE: dir structure and style
- fix dir structure
- bower, .gitignore, npm
- scss
- separate templates

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: sanus|art
 email: sanusart@gmail.com
 description: "Description"
 baseurl: ""
-url: "http://sanusart.com"
+url: "http://localhost:4000"
 
 # Build settings
 markdown: kramdown
