--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,24 @@ title: sanus|art
 email: sanusart@gmail.com
 description: "Description"
 baseurl: ""
+year: 2014
+highlighter: true
 url: "http://localhost:4000"
 
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+navigation:
+- text: Home
+  url: /
+  level: 1
+- text: About
+  url: /about/
+  level: 1
+- text: Stuff
+  url: /stuff/
+  level: 1
+- text: Contact
+  url: /contact/
+  level: 1
