--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,3 +32,23 @@
   text: Portfolio
   url: /portfolio/
   sub_id_of: 2
+
+- linkid: 9
+  text: Code
+  url: /code/
+  sub_id_of: 5
+
+- linkid: 10
+  text: Music
+  url: /music/
+  sub_id_of: 5
+
+- linkid: 11
+  text: VST
+  url: /vst/
+  sub_id_of: 5
+
+- linkid: 12
+  text: VSTi
+  url: /vsti/
+  sub_id_of: 5
