--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 _site
 assets
 .idea
+node_modules
+uploads
+fonts/FontAwesome.otf
+fonts/fontawesome-webfont.eot
+fonts/fontawesome-webfont.svg
+fonts/fontawesome-webfont.ttf
+fonts/fontawesome-webfont.woff
