--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "normalize.css": "~3.0.1",
     "modernizer": "~2.8.2",
     "font-awesome": "~4.1.0",
-    "instantclick": "~3.0.1"
+    "instantclick": "~3.0.1",
+    "highlightjs": "~8.0.0"
   }
 }
