--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   },
   "homepage": "https://github.com/sanusart/sanusart.com",
   "devDependencies": {
-    "gulp": "^3.8.7"
+    "connect": "^3.1.1",
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.3.4",
+    "gulp-connect": "^2.0.6",
+    "gulp-minify-html": "^0.1.4",
+    "gulp-sass": "^0.7.3",
+    "gulp-watch": "^0.6.9"
   }
 }
