--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@ _site
 assets
 .idea
 node_modules
-uploads
 fonts/FontAwesome.otf
 fonts/fontawesome-webfont.eot
 fonts/fontawesome-webfont.svg
 fonts/fontawesome-webfont.ttf
 fonts/fontawesome-webfont.woff
+downloads/*
+!downloads/.gitkeep
+.sass-cache
