--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "modernizer": "~2.8.2",
     "font-awesome": "~4.1.0",
     "instantclick": "~3.0.1",
-    "highlightjs": "~8.0.0"
+    "highlightjs": "~8.0.0",
+    "hint.css": "~1.3.3"
   }
 }
