--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
 - 2.1
-script: script: jekyll build # && htmlproof ./_site
+script: jekyll build # && htmlproof ./_site
 
 # branch whitelist
 branches:
