--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "sanusart.com",
-  "version": "1.0.0",
-  "description": "sanusart.com rewrite",
-  "main": "index.html",
-  "scripts": {
-    "test": "none",
-    "postInstall": "bower install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sanusart/sanusart.com.git"
-  },
-  "keywords": [
-    "sa"
-  ],
-  "author": "Sasha Khamkov <sanusart@gmail.com>",
-  "license": "Custom",
-  "bugs": {
-    "url": "https://github.com/sanusart/sanusart.com/issues"
-  },
-  "homepage": "https://github.com/sanusart/sanusart.com",
-  "devDependencies": {
-    "connect": "^3.1.1",
-    "gulp": "^3.8.7",
-    "gulp-concat": "^2.3.4",
-    "gulp-connect": "^2.0.6",
-    "gulp-minify-html": "^0.1.4",
-    "gulp-rsync": "0.0.4",
-    "gulp-sass": "^0.7.3",
-    "gulp-watch": "^0.6.9"
-  }
+    "name": "sanusart.com",
+    "version": "1.0.0",
+    "description": "sanusart.com rewrite",
+    "main": "index.html",
+    "scripts": {
+        "test": "none",
+        "postInstall": "bower install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sanusart/sanusart.com.git"
+    },
+    "keywords": [
+        "sa"
+    ],
+    "author": "Sasha Khamkov <sanusart@gmail.com>",
+    "license": "Custom",
+    "bugs": {
+        "url": "https://github.com/sanusart/sanusart.com/issues"
+    },
+    "homepage": "https://github.com/sanusart/sanusart.com",
+    "devDependencies": {
+        "bower": "^1.3.12",
+        "connect": "^3.1.1",
+        "gulp": "^3.8.7",
+        "gulp-concat": "^2.3.4",
+        "gulp-connect": "^2.0.6",
+        "gulp-minify-html": "^0.1.4",
+        "gulp-rsync": "0.0.4",
+        "gulp-sass": "^0.7.3",
+        "gulp-watch": "^0.6.9"
+    }
 }
