FIX: rename content files
- rename content files by removing date from start of the filenames.

--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,15 @@ email: "sanusart@gmail.com"
 description: "Sanus Artificium - free software for music creation, music downloads, sound engineering information, a few how to's, PHP, JavaScript and web development stuff in general"
 year: "2014"
 highlighter: pygments
-url: "https://dev.sa.com"
+
+#url: "https://sanusart.com"
+url: "http://dev.sa.com"
 
 author: '<a target="_blank" href="https://plus.google.com/111862979601357461785" rel="publisher">Sasha Khamkov</a>'
 
-baseurl: ""
+#baseurl: "https://sanusart.com"
+baseurl: "http://dev.sa.com"
+
 port:    4000
 host:    0.0.0.0
 
@@ -16,10 +20,12 @@ markdown: kramdown
 permalink: pretty
 
 include: [.htaccess]
-exclude: [.gitignore, .bowerrc, jmk, package.json, gulpfile.js, node_modules, assets, mkpage.sh, README.md,bower.json]
+exclude: [.gitignore, .bowerrc, jmk, package.json, gulpfile.js, node_modules, assets, mkpage.sh, README.md,bower.json, Gemfile.lock,Gemfile]
 
 collections:
   codes:
     output: true
   vsts:
+    output: true
+  graphics:
     output: true
