--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,17 @@
+RewriteEngine On
 ErrorDocument 404 /404/
+
+Redirect 301 /from https://sanusart.com/about/portfolio/
+Redirect 301 /about-us https://sanusart.com/about/
+Redirect 301 /web https://sanusart.com
+Redirect 301 /FROM https://sanusart.com
+Redirect 301 /support-us/ https://sanusart.com
+Redirect 301 /products/ https://sanusart.com/projects/
+Redirect 301 /music/ https://sanusart.com/projects/music/
+Redirect 301 /products/scripts/ https://sanusart.com/projects/code/
+Redirect 301 /products/vst-plugins/ https://sanusart.com/projects/vst-plugins/
+Redirect 301 /contact-us/ https://sanusart.com/contact/
+
+
+
+
