--- a/bower.json
+++ b/bower.json
@@ -25,9 +25,11 @@
     "jquery": "~2.1.1",
     "normalize.css": "~3.0.1",
     "modernizer": "~2.8.2",
-    "font-awesome": "~4.1.0",
+    "font-awesome": "4.2.0",
     "instantclick": "~3.0.1",
     "highlightjs": "~8.0.0",
-    "hint.css": "~1.3.3"
+    "hint.css": "~1.3.3",
+    "fancyclick": "morsdyce/fancyclick",
+    "animate.css": "~3.2.0"
   }
 }
