FIX: file names
- fix filenames
- remove un-used files

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ host:    0.0.0.0
 markdown: kramdown
 permalink: pretty
 
-include: [.htaccess]
+include: [.htaccess, css/style.css,js/script.js]
 exclude: [.gitignore, .bowerrc, jmk, package.json, gulpfile.js, node_modules, assets, mkpage.sh, README.md,bower.json, Gemfile.lock,Gemfile]
 
 collections:
