--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,23 @@
 RewriteEngine On
 ErrorDocument 404 /404/
 
+### EXPIRES CACHING ###
+<IfModule mod_expires.c>
+ExpiresActive On
+ExpiresByType image/jpg "access plus 1 year"
+ExpiresByType image/jpeg "access plus 1 year"
+ExpiresByType image/gif "access plus 1 year"
+ExpiresByType image/png "access plus 1 year"
+ExpiresByType text/css "access plus 1 month"
+ExpiresByType application/pdf "access plus 1 month"
+ExpiresByType text/x-javascript "access plus 1 month"
+ExpiresByType application/x-shockwave-flash "access plus 1 month"
+ExpiresByType image/x-icon "access plus 1 year"
+ExpiresDefault "access plus 2 days"
+</IfModule>
+### EXPIRES CACHING ###
+
+### Redirects
 Redirect 301 /from https://sanusart.com/about/portfolio/
 Redirect 301 /about-us https://sanusart.com/about/
 Redirect 301 /web https://sanusart.com
