--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,9 @@
     "modernizer": "~2.8.2",
     "font-awesome": "4.2.0",
     "instantclick": "~3.0.1",
-    "highlightjs": "~8.0.0",
     "hint.css": "~1.3.3",
     "fancyclick": "morsdyce/fancyclick",
-    "animate.css": "~3.2.0"
+    "animate.css": "~3.2.0",
+    "highlightjs": "8.3.0"
   }
 }
