--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
 RewriteEngine On
+
+### http to https
+RewriteCond %{SERVER_PORT} ^80$
+RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+
 ErrorDocument 404 /404/
 
 ### EXPIRES CACHING ###
