--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine On
 
+### Force www
+RewriteCond %{HTTP_HOST} ^sanusart\.com
+RewriteRule (.*) http://www.sanusart.com/$1 [R=301,L]
+
 ### http to https
 RewriteCond %{SERVER_PORT} ^80$
 RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
@@ -33,6 +37,7 @@ Redirect 301 /music/ https://sanusart.com/projects/music/
 Redirect 301 /products/scripts/ https://sanusart.com/projects/code/
 Redirect 301 /products/vst-plugins/ https://sanusart.com/projects/vst-plugins/
 Redirect 301 /contact-us/ https://sanusart.com/contact/
+Redirect 301 /graphics.php/php/cloud/newsletter.php https://sanusart.com/projects/graphics/
 
 
 
