--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteRule (.*) http://www.sanusart.com/$1 [R=301,L]
 
 ### http to https
 RewriteCond %{SERVER_PORT} ^80$
-RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+RewriteRule ^.*$ https://www.%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 ErrorDocument 404 /404/
 
