--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
 RewriteEngine On
 
 ### Force www
-RewriteCond %{HTTP_HOST} ^sanusart\.com
-RewriteRule (.*) http://www.sanusart.com/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule ^(.*)$ https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-### http to https
-RewriteCond %{SERVER_PORT} ^80$
-RewriteRule ^.*$ https://www.%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+### HTTP to HTTPS:
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 ErrorDocument 404 /404/
 
