--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@ _site
 src/assets
 .idea
 node_modules
-src/fonts/FontAwesome.otf
-src/fonts/fontawesome-webfont.eot
-src/fonts/fontawesome-webfont.svg
-src/fonts/fontawesome-webfont.ttf
-src/fonts/fontawesome-webfont.woff
+src/fonts/*
+!src/fonts/spincycle*
 src/downloads/*
 src/css/styles.css
 src/js/scripts.js
