--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine On
 
+AddCharset UTF-8 .html .woff
+
 ### Force www
 RewriteCond %{HTTP_HOST} !^www\.
 RewriteRule ^(.*)$ https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
@@ -11,20 +13,46 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 ErrorDocument 404 /404/
 
 ### EXPIRES CACHING ###
-<IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType image/jpg "access plus 1 year"
-ExpiresByType image/jpeg "access plus 1 year"
-ExpiresByType image/gif "access plus 1 year"
-ExpiresByType image/png "access plus 1 year"
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/pdf "access plus 1 month"
-ExpiresByType text/x-javascript "access plus 1 month"
-ExpiresByType application/x-shockwave-flash "access plus 1 month"
-ExpiresByType image/x-icon "access plus 1 year"
-ExpiresDefault "access plus 2 days"
-</IfModule>
-### EXPIRES CACHING ###
+<ifModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access plus 1 month"
+    # Expires after 1 month
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType application/x-javascript "access plus 1 month"
+    ExpiresByType text/plain "access plus 1 month"
+    # Expires after 1 day
+    ExpiresByType text/css "access plus 1 month"
+</ifModule>
+
+### CACHE-CONTROL HEADERS ###
+<ifModule mod_headers.c>
+    <filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf)$">
+        Header set Cache-Control "max-age=2592000, public"
+    </filesMatch>
+    <filesMatch "\.(css)$">
+        Header set Cache-Control "max-age=604800, public"
+    </filesMatch>
+    <filesMatch "\.(js)$">
+        Header set Cache-Control "max-age=216000, private"
+    </filesMatch>
+    <filesMatch "\.(xml|txt)$">
+        Header set Cache-Control "max-age=216000, public, must-revalidate"
+    </filesMatch>
+    <filesMatch "\.(html|htm|php)$">
+        Header set Cache-Control "max-age=1, private, must-revalidate"
+    </filesMatch>
+    # TURN OFF ETAGS
+    Header unset ETag
+    # TURN OF LAST-MODIFIED HEADERS
+    Header unset Last-Modified
+</ifModule>
+
+FileETag None
 
 ### Redirects
 Redirect 301 /from https://sanusart.com/about/portfolio/
@@ -38,7 +66,3 @@ Redirect 301 /products/scripts/ https://sanusart.com/projects/code/
 Redirect 301 /products/vst-plugins/ https://sanusart.com/projects/vst-plugins/
 Redirect 301 /contact-us/ https://sanusart.com/contact/
 Redirect 301 /graphics.php/php/cloud/newsletter.php https://sanusart.com/projects/graphics/
-
-
-
-
