--- a/src/.htaccess
+++ b/src/.htaccess
@@ -57,6 +57,7 @@ FileETag None
 ### Redirects
 Redirect 301 /cv https://www.sanusart.com/about/cv/
 Redirect 301 /resume https://www.sanusart.com/about/cv/
+Redirect 301 /php.php https://www.sanusart.com/projects/code/
 Redirect 301 /from https://sanusart.com/about/portfolio/
 Redirect 301 /about-us https://sanusart.com/about/
 Redirect 301 /web https://sanusart.com
