--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "homepage": "https://github.com/sanusart/sanusart.com",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "browser-sync": "^2.3.1",
-    "del": "^1.1.1",
+    "bower": "^1.6.9",
+    "browser-sync": "^2.10.0",
+    "del": "^2.1.0",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "1.0.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-if": "^1.2.5",
-    "gulp-inline-source": "^1.2.0",
-    "gulp-minify-css": "^0.5.1",
+    "gulp-if": "^2.0.0",
+    "gulp-inline-source": "^2.1.0",
+    "gulp-minify-css": "^1.2.2",
     "gulp-minify-html": "^1.0.0",
-    "gulp-sass": "^0.7.3",
-    "gulp-uglify": "^1.1.0",
-    "yargs": "^3.6.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-uglify": "^1.5.1",
+    "yargs": "^3.31.0"
   }
 }
