--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-css-base64": "^1.3.4",
     "gulp-if": "^2.0.0",
+    "gulp-inline-image-html": "^0.2.1",
     "gulp-inline-source": "^2.1.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-minify-html": "^1.0.0",
